Add initial web pages

--- a/index.html
+++ b/index.html
@@ -262,8 +262,12 @@ margin-right: auto;
 <div class="start-container">
   <div class="start-startimage">
 <h2></h2>
-<img src="image/Describe.png" alt="About us "class="center">
+<img src="Describe.png" alt="About us "class="center">
+<video controls>
+  <source src="My Video.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
 
+</video>
 
 
 
