--- a/Discover.html
+++ b/Discover.html
@@ -19,6 +19,37 @@
 <body>
 <!-- JavaScript -->
 
+<style>
+.btn {
+  background: #4366ad;
+  background-image: -webkit-linear-gradient(top, #4366ad, #4369b5);
+  background-image: -moz-linear-gradient(top, #4366ad, #4369b5);
+  background-image: -ms-linear-gradient(top, #4366ad, #4369b5);
+  background-image: -o-linear-gradient(top, #4366ad, #4369b5);
+  background-image: linear-gradient(to bottom, #4366ad, #4369b5);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  text-shadow: 0px 0px 0px #ffe3ff;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 13px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #5a71b0;
+  background-image: -webkit-linear-gradient(top, #5a71b0, #5365b0);
+  background-image: -moz-linear-gradient(top, #5a71b0, #5365b0);
+  background-image: -ms-linear-gradient(top, #5a71b0, #5365b0);
+  background-image: -o-linear-gradient(top, #5a71b0, #5365b0);
+  background-image: linear-gradient(to bottom, #5a71b0, #5365b0);
+  text-decoration: none;
+}
+
+
+</style>
 
 
 
