--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ margin-right: auto;
   <div class="start-startimage">
 <h2></h2>
 <img src="Describe.png" alt="About us "class="center">
-<video controls>
+<video class="center" controls>
   <source src="My Video_Trim.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 
