Add update index.html

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ margin-right: auto;
 
 <hr>
 <h1 class="h1title">  How to Drop you'e ideas and queries in  our website <h1>
-<p class="para"> if you have any idea of what we can add to our website or  you can send your'e videos or youtube link and we will choose the best video for the heading #cure boredom . Drop your ideas , if you have any  queries . drop in the
+<p class="para"> if you have any idea of what we can add to our website or  you can send your'e videos or youtube link and we will choose the best video for the heading #cure boredom , if you have any  queries . drop in the
 tab down in our website
 </p>
 
