Add update file

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@ tab down in our website
 
     <div class="contact-me">
 
-        <a class="btn" href="mailto:disktry@gmail.com">Contact us for queries</a>
-        <a class="btn" href="mailto:disktry@gmail.com">Drop you're ideas</a>
+        <a class="btn" href="mailto:nettwork.try@gmail.com">Contact us for queries</a>
+        <a class="btn" href="mailto:nettwork.try@gmail.com">Drop you're ideas</a>
       </div>
     </div>
 
