--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Net.try</title>
+  <title>Work desk</title>
 
     <!-- Bootstrap CSS -->
 
@@ -249,7 +249,7 @@ margin-right: auto;
 </ul></div>
 </nav></spam>
 
-<script src="index.js" charset="utf-8"></script>
+
 
 
 
@@ -278,9 +278,9 @@ margin-right: auto;
 </div>
 
 <hr>
-<h1 class="h1title">  How to Drop you'e ideas and queries in  our website <h1>
-<p class="para"> if you have any idea of what we can add to our website or  you can send your'e videos or youtube link and we will choose the best video for the heading #cure boredom , if you have any  queries . drop in the
-tab down in our website
+<h1 class="h1title"> See how to Drop you'e ideas and queries<h1>
+<p class="para"> if you have any idea of what we can add to our website or if you have any  queries . drop it in the
+tab down in our website if you didn't found them <a class="btn"href="#contact-me">click here</a>
 </p>
 
 
@@ -313,7 +313,7 @@ tab down in our website
 
     <div class="bottom-container">
 
-    
+
         <a class="footer-link" href="https://www.youtube.com/channel/UCxJKHzxKZb0N54krWP8lJlw">Youtube</a>
       <p class="copyright">© Net.try2022</p>
     </div>
