--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ margin-right: auto;
 <!-- nav-bar -->
 
 <spam> <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="index.html">Net.try </a>
+<a class="navbar-brand" href="index.html">Work desk </a>
 
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
