Add updated query page

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ margin-right: auto;
 <hr>
 <h1 class="h1title"> See how to Drop you'e ideas and queries<h1>
 <p class="para"> if you have any idea of what we can add to our website or if you have any  queries . drop it in the
-tab down in our website if you didn't see them <a class="btn" href="#contact-me">click here</a>
+tab down in our website if you didn't see them <a class="btn" href="#contact-me">click here</a>  still don't see them <a class="btn" href="mailto:nettwork.try@gmail.com">click here</a> here to dirctly send ideas or queries
 
 
 <!-- middle -->
