Add updated file to website

--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@ margin-right: auto;
 <div class="start-container">
   <div class="start-startimage">
 <h2></h2>
-<img src="Describe.png" alt="About us "class="center">
+<img src="Happy new year.png" alt="new year img "class="center">
 <video class="center" controls>
-  <source src="My Video_Trim.mp4" type="video/mp4">
+  <source src="Newyear.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 
 </video>
@@ -308,7 +308,6 @@ tab down in our website if you didn't see them <a class="btn" href="#contact-me"
         <a class="btn" href="mailto:nettwork.try@gmail.com">Drop you're ideas</a>
       </div>
     </div>
-
 
     <div class="bottom-container">
 
