Add update website

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ margin-right: auto;
   <div class="start-startimage">
 <h2></h2>
 <img src="Happy new year.png" alt="new year img "class="center">
-<video class="center" controls>
+<video class="center" autoplay>
   <source src="Newyear.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 
