Add  website files

--- a/index.html
+++ b/index.html
@@ -216,8 +216,10 @@ margin-right: auto;
 
 
 
-
 </style>
+
+
+
 
 
 
@@ -259,13 +261,13 @@ margin-right: auto;
 <div class="start-container">
   <div class="start-startimage">
 <h2></h2>
+
 <img src="Happy new year.png" alt="new year img "class="center">
-<video class="center" autoplay>
+
+
+<video class="center" control>
   <source src="Newyear.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
-
-</video>
-
 
 
 
